# FovCalculator

./: .gitignore  CMakeLists.txt  DORICalculator.pro  DORICalculator.qrc  FovCalculator.qrc  Main.cpp  README.md  Resources.qrc
Core/: Controller.cpp  Controller.h  Enums.h  Logic.cpp  Logic.h  Typedefs.h
Dependencies/: Dependencies.pri
GUI/: CentralWidget.cpp  CentralWidget.h  Handle.cpp  Handle.h  Rectangle.h  SideViewWidget.cpp  SideViewWidget.h  TopViewWidget.cpp  TopViewWidget.h
OpenGL/: BasicShader.cpp  Camera.cpp  CustomNode.cpp  CustomNode.h  CustomNodeData.h  ModelLoader.cpp  Node.cpp  NodeManager.h  SimpleModel.cpp  SimpleModel.h  SimpleModelData.h  Window3D.cpp  Window3D.h
Resources/Shaders/Basic/: FragmentShader.frag  VertexShader.vert
Resources/Style/: Style.qss
Source/: Main.cpp
Source/Core/: Constants.h  Controller.cpp  Controller.h  Converter.cpp  Converter.h  Logic.cpp  Logic.h  Structs.h
Source/Gui/: Handle.cpp  Handle.h  InfoWidget.cpp  InfoWidget.h  Rectangle.cpp  SideViewWidget.cpp  SideViewWidget.h  TopViewWidget.cpp  TopViewWidget.h  Window.cpp  Window.h
Source/OpenGL/: BasicShader.cpp  Camera.h  CustomNodeData.cpp  Material.h  SimpleModelData.cpp  Window3D.h
Source/Util/: Logger.cpp  Logger.h
resources/Style/: Style.qss
src/: Main.cpp
src/Core/: Constants.h  Controller.h  Enums.h  Logic.cpp  Logic.h  Typedefs.h
src/Gui/: CentralWidget.cpp  CentralWidget.h  SideViewWidget.cpp  TopViewWidget.cpp
src/OpenGL/: BasicShader.cpp  Material.cpp  ModelLoader.cpp  ModelLoader.h  Node.h  NodeManager.cpp  Window3D.cpp
